[workspace]
resolver = "2"
members = [
    "rekordbox-core",
    "rekordbox-server",
    "rekordbox-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/yourusername/rekordbox-export"

[workspace.dependencies]
# Core serialization - rekordcrate uses this
binrw = "0.14"

# Audio decoding - pure Rust, streaming support
symphonia = { version = "0.5", default-features = false, features = [
    "mp3", "flac", "aac", "wav", "aiff", "pcm"
]}

# BPM/key detection - 87.7% accuracy, pure Rust
# Note: stratum-dsp may need to be vendored or use git
# stratum-dsp = "0.1"

# FFT for waveform generation - SIMD optimized
rustfft = "6.2"

# Spectrum analysis
spectrum-analyzer = "1.5"

# Async runtime - tokio for server, but memory-conscious config
tokio = { version = "1.41", features = ["rt", "net", "io-util", "sync", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Filesystem watching
notify = "6.1"

# CLI argument parsing (minimal)
clap = { version = "4.5", features = ["derive"] }

# Logging - lightweight
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Path handling
walkdir = "2.5"

# Hashing for cache keys
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Memory-mapped files for large audio
memmap2 = "0.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
