[workspace]
resolver = "2"
members = [
    "rekordbox-core",
    "rekordbox-server",
    "rekordbox-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rekord-export contributors"]
license = "MIT"
repository = "https://github.com/xilver1/rekord-export"

[workspace.dependencies]
# Binary serialization
binrw = "0.14"

# Audio decoding - pure Rust, streaming support
symphonia = { version = "0.5", default-features = false, features = [
    "mp3", "flac", "aac", "wav", "aiff", "pcm"
]}

# FFT for waveform generation - SIMD optimized
rustfft = "6.2"

# Async runtime - single-threaded for memory efficiency
tokio = { version = "1.41", features = ["rt", "net", "io-util", "sync", "macros", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Path handling
walkdir = "2.5"

# Hashing for cache keys
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
