[package]
name = "rekordbox-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "rbx"
path = "src/main.rs"

[dependencies]
# Minimal dependencies for small binary size
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json.workspace = true

# Optional tokio for async socket (can use sync if needed)
tokio = { version = "1.41", features = ["rt", "net", "io-util", "macros"], optional = true }

[features]
default = []
async = ["tokio"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
