[package]
name = "rekordbox-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "rekordbox"
path = "src/main.rs"

[dependencies]
# Async runtime - minimal features
tokio = { version = "1.41", features = ["rt", "net", "io-util", "macros"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI args
clap = { workspace = true }

# Errors
anyhow = { workspace = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
